ak1pro/staging/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: staging
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-gateway
      namespace: kube-public
      sectionName: http
  hostnames:
    # - "*.ak1pro.n1l.ro" # this route escapes NS confinement and works also for prod routes
    - "qb-staging.ak1pro.n1l.ro"
    - "jf-staging.ak1pro.n1l.ro"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: qb-staging
  namespace: staging
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-gateway
      namespace: kube-public
      sectionName: https
  hostnames:
    - "qb-staging.ak1pro.n1l.ro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jf-staging
  namespace: staging
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-gateway
      namespace: kube-public
      sectionName: https
  hostnames:
    - "jf-staging.ak1pro.n1l.ro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 80
